Fixed nav overflow bug.

--- a/index.css
+++ b/index.css
@@ -39,7 +39,6 @@ nav {
     z-index: 1000;
     overflow: hidden;
 }
-
 .logo {
     font-size: 32px;
     font-family: "Logam";
@@ -95,18 +94,20 @@ nav ul li a:hover {
         margin: auto;
     }
 }
+.active {
+    overflow: visible;
+}
 .active ul {
     display: flex;
     flex-direction: column;
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: rgba(20, 20, 20, 0.8);
-    backdrop-filter: blur(5px);
+    background: rgba(20, 20, 20, 0.9);
+    /* backdrop-filter: blur(5px); */
     top: 70px;
     left: 0;
     text-align: center;
-    z-index: 10;
 }
 .active #hamburger {
     display: block;
